--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-
+<div class="wrapper">
 	<h3 class="text-center mt-5">GitHub API</h3>
 	<form id="gitHubForm" class="form-inline mx-auto" style="width: 280px">
 		<input id="usernameInput" class="form-control mb-5" type="text" name="username" placeholder="GitHub Username">
@@ -18,7 +18,7 @@
 	<ul id="userRepos" class="list-group mx-auto mb-5" style="width: 500px">
 
 	</ul>
-	
+	</div>
 	<script src="app.js"></script>
 </body>
 </html>
